delete unnecessary code

--- a/map/public/index.html
+++ b/map/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site displayed geolocations which are converted ip addresses onto kakao map"
     />
-    <title>Timepercent</title>
+    <title>IP MAP</title>
 </head>
 <body>
     <div id="root">1234</div>
