날짜 필터링 데이터 추가

--- a/map/public/index.html
+++ b/map/public/index.html
@@ -10,6 +10,9 @@
       content="Web site displayed geolocations which are converted ip addresses onto kakao map"
     />
     <title>IP MAP</title>
+    <style>
+        body, html {height: 100%;}
+    </style>
 </head>
 <body>
     <div id="root">1234</div>
